--- a/.settings/com.appcelerator.titanium.core.prefs
+++ b/.settings/com.appcelerator.titanium.core.prefs
@@ -1,5 +1,10 @@
 eclipse.preferences.version=1
 provisioning_profiles/development/98036BD8-7F55-4752-9042-E9EEBFF373C1/appid=*
-provisioning_profiles/development/98036BD8-7F55-4752-9042-E9EEBFF373C1/filepath=/Users/harigadiraju/Library/MobileDevice/Provisioning Profiles/98036BD8-7F55-4752-9042-E9EEBFF373C1.mobileprovision
 provisioning_profiles/development/98036BD8-7F55-4752-9042-E9EEBFF373C1/name=Flair Dev
 provisioning_profiles/development/98036BD8-7F55-4752-9042-E9EEBFF373C1/uuid=98036BD8-7F55-4752-9042-E9EEBFF373C1
+provisioning_profiles/distribution/98036BD8-7F55-4752-9042-E9EEBFF373C1/appid=*
+provisioning_profiles/distribution/98036BD8-7F55-4752-9042-E9EEBFF373C1/name=Flair Dev
+provisioning_profiles/distribution/98036BD8-7F55-4752-9042-E9EEBFF373C1/uuid=98036BD8-7F55-4752-9042-E9EEBFF373C1
+provisioning_profiles/distribution/F3866D98-6471-428A-9F48-BEF77A5EFD14/appid=*
+provisioning_profiles/distribution/F3866D98-6471-428A-9F48-BEF77A5EFD14/name=Flair
+provisioning_profiles/distribution/F3866D98-6471-428A-9F48-BEF77A5EFD14/uuid=F3866D98-6471-428A-9F48-BEF77A5EFD14
