--- a/.settings/com.appcelerator.titanium.mobile.prefs
+++ b/.settings/com.appcelerator.titanium.mobile.prefs
@@ -2,7 +2,7 @@ eclipse.preferences.version=1
 iosLaunchConfigurationAttributes/ATTR_MINIFY=true
 iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=Flair
 iosLaunchConfigurationAttributes/appid=me.flair
-iosLaunchConfigurationAttributes/certificate=Hari  Gadiraju (7KWCVMJ5X6)
+iosLaunchConfigurationAttributes/certificate=Hari  Gadiraju
 iosLaunchConfigurationAttributes/keychain=/Users/harigadiraju/Library/Keychains/login.keychain
 iosLaunchConfigurationAttributes/sdk_version=6.0
-iosLaunchConfigurationAttributes/uuid=98036BD8-7F55-4752-9042-E9EEBFF373C1
+iosLaunchConfigurationAttributes/uuid=F3866D98-6471-428A-9F48-BEF77A5EFD14
